# passkey-ex

./: README.md  docker-compose.yml  package.json
client/: .eslintrc.cjs  package.json  (+2 more)
server/: Cargo.toml
server/database/: init.sql
server/src/: lib.rs  main.rs
server/src/controller/: convert_helpers.rs  error_response.rs  handle_get_key.rs  handle_logout.rs  handle_password.rs  handle_register_request.rs  handle_register_response.rs  handle_remove_key.rs  handle_signin_request.rs  handle_signin_response.rs  handle_update_cred_name.rs  handle_update_username.rs  handle_userinfo.rs  handle_username.rs  helpers.rs  mod.rs
server/src/core/: cors_init.rs  mod.rs  session_init.rs
server/src/database/: credentials.rs  helpers_credentials.rs  helpers_users.rs  mod.rs  prelude.rs  users.rs
server/src/model/: const_value.rs  mod.rs
server/src/routes/: custom_json_extractor.rs  get_json.rs  mirror_body_json.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  returns_201.rs  validate_with_serde.rs
server/src/routes/auth/: helpers.rs  mod.rs  password.rs  username.rs
server/src/routes/db_route/: create_task.rs  delete_task.rs  get_tasks.rs  mod.rs  partial_update_task.rs  update_task.rs
server/src/routes/middle_ware/: middle_ware_csrf.rs  middle_ware_custom_header.rs  middle_ware_message.rs  middle_ware_route_guard.rs  middle_ware_session.rs  mod.rs  set_middle_ware_custom_header.rs
server/src/routes/users/: users.rs
server/src/utils/: app_error.rs  base64_util.rs  header_parse.rs  helpers_app_error.rs  mod.rs
(+31 files in other folders)
