[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
base64 = "0.22.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.8.5"
regex = "1.11.1"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.11.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
tower-sessions = { version = "0.13.0", features = ["private", "signed"] }
validator = { version = "0.18.1", features = ["derive"] }
